<resources>
    <string name="app_name">TriFit</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">My Profile</string>
    <string name="title_activity_workout_programs">Workout Programs</string>
    <string name="title_activity_challenges">Challenges</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="first_run_text">Hi! It looks like this is the first time, you start the app. Please give us some information, so we can get started!</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="gender">Gender</string>
    <string name="submit">Submit</string>
    <string name="profile">Profile</string>
    <string name="workout_programs">Workout Programs</string>
    <string name="challenges">Challenges</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="bmi">BMI:</string>
    <string name="bmr">BMR:</string>
    <string name="date">Date</string>
    <string name="wp_image_description">Image about the style of workout program.</string>
    <string name="add">Add</string>
    <string name="reset">Reset</string>
    <string name="refresh">Refresh</string>
    <string name="user_name">User Name</string>
    <string name="birthdate">BirthDate</string>
    <string name="title">Title</string>
    <string name="about_content">The goal of this app is to help it\'s users in the beginning of a new lifestyle, where sport and happiness is a key factor.</string>
    <string name="about_creator">This application was created by Arnold Szilveszter Kovacs.</string>
    <string name="about_version">Current version is 1.0</string>
    <string name="main_notification_channel_name">main_notification_channel_name</string>
    <string name="workout_reminder_notification_title">Time to workout!</string>
    <string name="workout_reminder_notification_body">There\'s never a better time to work out!</string>
    <string name="log_reminder_notification_title">It\'s time to log!</string>
    <string name="log_reminder_notification_body">Log your weight for progress tracking.</string>
    <string name="useful_informations">Informations</string>
</resources>
