<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/nav_group_top"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account_box_black_24dp"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_workout_programs"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/workout_programs" />
        <item
            android:id="@+id/nav_challanges"
            android:icon="@drawable/ic_timer_black_24dp"
            android:title="@string/challanges" />
    </group>
    <group android:id="@+id/nav_group_bot">

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_reset"
            android:title="Reset"
            android:icon="@android:drawable/ic_menu_revert" />

    </group>

</menu>
